js/js.translator/testData/incremental/invalidation/multiModuleEagerInitialization/lib1/l1.kt
var z1 = false
var z2 = false
